# Ceres_thermal_rgb

./: CMakeLists.txt  README.md
include/ceres_calib/: project.hpp  ransac.hpp  reprojection_cost.hpp
scripts/: demo_superglue.py  find_matches_superglue.py  koide_corres.py  plot_corres.py  revert_clache.py
src/: ceres_optimize_pose.cpp  ransac.cpp
